<resources>
    <string name="app_name">Github User</string>
    <string name="empty_text">-</string>
    <string name="toggle_follow">Follow</string>
    <string name="toggle_unfollow">UnFollow</string>
    <string name="title_following">Following</string>
    <string name="title_follower">Follower</string>
    <string name="title_repository">Repository</string>
    <string name="menu_share">Share</string>
    <string name="tab_1">Repository</string>
    <string name="tab_2">Follower</string>
    <string name="tab_3">Following</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="empty_search">Search more than 99M users</string>
    <string name="empty_repository">Don\'t Have Repository</string>
    <string name="empty_follower">Don\'t Have Follower</string>
    <string name="empty_following">Don\'t Follow Anyone</string>
    <string name="nofound_search">No data found</string>
    <string name="tab_layout">Tab layout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data_favorite">Your Favorite Is Empty</string>
    <string name="menu_favorite">Favorite</string>
    <string name="save_favorite">Save Favorite?</string>
    <string name="menu_delete">Delete Favorites</string>
    <string name="title_favorite">Favorite List</string>


</resources>